fix: Add dark mode colors to checkboxes and the main CTA icon

--- a/src/scss/2021/components/_checkbox.scss
+++ b/src/scss/2021/components/_checkbox.scss
@@ -10,8 +10,8 @@
     width: 1.5rem;
     height: 1.5rem;
     border-radius: 0;
-    border: 1px solid color(neutral-1);
-    background: color(neutral-3);
+    border: 1px solid var(--color-neutral-1);
+    background: var(--color-neutral-3);
     cursor: pointer;
     transition: all var(--time-sm) var(--timing-snap);
 
@@ -22,7 +22,7 @@
       right: 0;
       bottom: 0;
       left: 0;
-      background: color(neutral-1);
+      background: var(--color-neutral-1);
       transition: all var(--time-sm) var(--timing-snap);
       transform-origin: top center;
       transform: scaleY(0);
@@ -35,15 +35,15 @@
       left: 0.4375rem;
       width: 0.375rem;
       height: 0.75rem;
-      border-right: 2px solid color(neutral-3);
-      border-bottom: 2px solid color(neutral-3);
+      border-right: 2px solid var(--color-neutral-3);
+      border-bottom: 2px solid var(--color-neutral-3);
       transform: rotate(45deg), translateY(1.5rem);
       transition: all var(--time-sm) 150ms var(--timing-snap);
       opacity: 0;
     }
 
     &:hover {
-      box-shadow: 0 0 0 1px color(neutral-1);
+      box-shadow: 0 0 0 1px var(--color-neutral-1);
     }
 
     &:checked::before {
